DP-5654 Default values: major overhaul (#37)
* Major overhaul

* kleine aanpassingen

* kleine aanpassingen

* Fixes voor diversen

* kleine aanpassingen

* Fix testcase

* Aanpassingen om overbodige call naar _add_dc_identifiers_to te voorkomen
